--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "deck.gl-pmtiles",
   "repository": "https://github.com/jtmiclat/deck.gl-pmtiles",
-  "version": "1.0.0",
+  "version": "1.0.0-dev",
   "description": "Deck.GL Layers for pmtiles",
   "main": "dist/index.js",
   "files": [
