--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "Deck.GL Layers for pmtiles",
   "main": "dist/index.js",
   "files": [
-    "dist"
+    "dist",
+    "index.js"
   ],
   "scripts": {
     "build": "esbuild  index.js --bundle --outdir=dist --sourcemap"
