Fix deployemnt of example

--- a/example/package.json
+++ b/example/package.json
@@ -6,8 +6,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "deck.gl": "^8.8.3",
-    "deck.gl-pmtiles": "^1.0.0-dev2.0",
+    "deck.gl": "8.8.4",
     "mapbox-gl": "npm:empty-npm-package@^1.0.0",
     "maplibre-gl": "^2.1.9",
     "pmtiles": "^1.1.0",
